--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1 style="color:orange; font-size: 30px">Карточка ввода данных</h1>
-<form name="test" method="post" action="input1.php">
+<form name="test" method="post" action="">
   <div id="input_city">
   <p><b>Введите ваш город:</b><br>
    <input id="city" type="text" size="30" style="border-radius: 5px; height: 20px; margin-top: 10px">
