--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
   
   <p><input id="save" type="button" value="Сохранить" onclick="getInfo()"></p>
 </form>
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
