--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- -------------------------------------------- -->
   <div id="greeting" style="display: none;">
   <p id="greeting_text" style="font-size: 25px; color: blue"></p>
-  <button id="clear" onclick="crearCity()"> Очистить </button>
+  <button id="clear" style="display: none;" onclick="clearCity()"> Очистить </button>
   </div>
   <!-- ----------------------------------------------------- -->
   
