--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
    <input id="city" type="text" size="30" style="border-radius: 5px; height: 20px; margin-top: 10px">
   </p>
   </div>
-  <p><input id="save" type="button" value="Сохранить" onclick="saveCity()"></p>
   <!-- -------------------------------------------- -->
   <div id="greeting" style="display: none;">
   <p id="greeting_text" style="font-size: 25px; color: blue"></p>
@@ -29,8 +28,8 @@
    <input type="checkbox" name="prefer5" value="opera" onclick="saveChk()"> мне больше 12 лет<Br>
    <input type="checkbox" name="prefer6" value="firefox" onclick="saveChk()"> это задание выполнено правильно<Br>
   </p>
-  <p><input id="saveChk" type="button" value="Сохранить выбор" onclick="freezeChk()"></p>
   
+  <p><input id="save" type="button" value="Сохранить" onclick="getInfo()"></p>
 </form>
 <script src="js/main.js"></script>
 </body>
