--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <input type="checkbox" name="prefer5" value="opera" onclick="saveChk()"> мне больше 12 лет<Br>
    <input type="checkbox" name="prefer6" value="firefox" onclick="saveChk()"> это задание выполнено правильно<Br>
   </p>
-  
+  <p><input id="freeze_chk" type="button" value="Зафиксировать" onclick="freeze_Chk()"></p>
   
 </form>
 <script src="js/main.js"></script>
